Config container timezone local

--- a/holes/gdrive-backup/compose.yaml
+++ b/holes/gdrive-backup/compose.yaml
@@ -6,3 +6,5 @@ services:
       - .env
     volumes:
       - ${SYNC_FOLDER}:/backup
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
