--- a/holes/mcs-prominence2rpg/compose.yaml
+++ b/holes/mcs-prominence2rpg/compose.yaml
@@ -8,3 +8,5 @@ services:
       - .env
     volumes:
       - ./p2-data:/data
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
