--- a/holes/no-ip/compose.yaml
+++ b/holes/no-ip/compose.yaml
@@ -4,3 +4,6 @@ services:
     image: ghcr.io/noipcom/noip-duc:latest
     env_file:
       - .env
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
