--- a/holes/mcs-prominence2rpg/.env.example
+++ b/holes/mcs-prominence2rpg/.env.example
@@ -1,3 +1,13 @@
 EULA=true
 TYPE=FABRIC
 VERSION=1.20.1
+MEMORY=10G
+ENABLE_ROLLING_LOGS=true
+USE_AIKAR_FLAGS=true
+MAX_PLAYERS=5
+FORCE_GAMEMODE=true
+SNOOPER_ENABLED=false
+VIEW_DISTANCE=10
+ONLINE_MODE=false
+ALLOW_FLIGHT=true
+SERVER_NAME="Bro's Adventure"
